# 01-recursividad-NNelo

./: CMakeLists.txt  README.md
01_Potencia/: .main.cpp.kate-swp  potencia.cpp~
02_Sumatoria/: 03_Ackerman  04_MCD  CMakeCache.txt  Makefile  cmake_install.cmake  sumatoria.cpp~
02_Sumatoria/test/: Makefile  cmake_install.cmake  run_test
02_Sumatoria/test/01_Potencia/: Makefile
02_Sumatoria/test/02_Sumatoria/: Makefile
02_Sumatoria/test/03_Ackerman/: Makefile
02_Sumatoria/test/04_MCD/: Makefile
02_Sumatoria/test/05_Digitos/: Makefile
03_Ackerman/: .ackerman.cpp.kate-swp  03_Ackerman  CMakeCache.txt  Makefile  ackerman.cpp  ackerman.cpp~  cmake_install.cmake
03_Ackerman/test/: Makefile  cmake_install.cmake  run_test
03_Ackerman/test/01_Potencia/: Makefile
03_Ackerman/test/02_Sumatoria/: Makefile
03_Ackerman/test/03_Ackerman/: Makefile  cmake_install.cmake
03_Ackerman/test/04_MCD/: Makefile
03_Ackerman/test/05_Digitos/: Makefile  (+1 more)
04_MCD/: 05_Digitos  CMakeCache.txt  Makefile  cmake_install.cmake  mcd.cpp~
04_MCD/test/: Makefile  cmake_install.cmake  run_test
05_Digitos/: .digitos.cpp.kate-swp  01_Potencia  02_Sumatoria  04_MCD  05_Digitos  CMakeCache.txt  Makefile  cmake_install.cmake  digitos.cpp  digitos.cpp~  main.cpp
05_Digitos/test/: Makefile  cmake_install.cmake  run_test
test/: CMakeLists.txt
test/01_Potencia/: CMakeLists.txt  test.cpp
test/02_Sumatoria/: CMakeLists.txt  test.cpp
test/03_Ackerman/: CMakeLists.txt  test.cpp
test/04_MCD/: CMakeLists.txt  test.cpp
test/05_Digitos/: CMakeLists.txt  test.cpp
(+21 files in other folders)
